# SZOP_UILL7U_Film11/filmstreaming-app/openapi.yaml
@@ -1,17 +1,17 @@
 openapi: 3.0.0
 info:
   title: Film Streaming API
-  description: API for managing films and series in a streaming application.
+  description: Egy RESTful API a film streaming adatok kezelésére.
   version: 1.0.0
 servers:
   - url: http://localhost:3000
 paths:
-  /films:
+  /filmek:
     get:
-      summary: Get all films
+      summary: Az összes film lekérése
       responses:
         '200':
-          description: A list of films
+          description: A filmek listája
           content:
             application/json:
               schema:
@@ -19,7 +19,7 @@ paths:
                 items:
                   $ref: '#/components/schemas/Film'
     post:
-      summary: Create a new film
+      summary: Új film létrehozása
       requestBody:
         required: true
         content:
@@ -28,37 +28,37 @@ paths:
               $ref: '#/components/schemas/Film'
       responses:
         '201':
-          description: Film created
+          description: Film létrehozva
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/Film'
-  /films/{id}:
+  /filmek/{id}:
     get:
-      summary: Get a film by ID
+      summary: Film lekérése ID alapján
       parameters:
         - name: id
           in: path
           required: true
-          description: The ID of the film
+          description: A film azonosítója
           schema:
             type: string
       responses:
         '200':
-          description: A film object
+          description: Egy film objektum
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/Film'
         '404':
-          description: Film not found
+          description: Film nem található
     put:
-      summary: Update a film by ID
+      summary: Film frissítése ID alapján
       parameters:
         - name: id
           in: path
           required: true
-          description: The ID of the film
+          description: A film azonosítója
           schema:
             type: string
       requestBody:
@@ -69,46 +69,115 @@ paths:
               $ref: '#/components/schemas/Film'
       responses:
         '200':
-          description: Film updated
+          description: Film frissítve
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/Film'
         '404':
-          description: Film not found
+          description: Film nem található
     delete:
-      summary: Delete a film by ID
+      summary: Film törlése ID alapján
       parameters:
         - name: id
           in: path
           required: true
-          description: The ID of the film
+          description: A film azonosítója
           schema:
             type: string
       responses:
         '204':
-          description: Film deleted
+          description: Film törölve
         '404':
-          description: Film not found
+          description: Film nem található
   /sajatlista:
     get:
-      summary: Get user's film list
+      summary: Az összes film lekérése
       responses:
         '200':
-          description: A list of user's films
+          description: A filmek listája
           content:
             application/json:
               schema:
                 type: array
                 items:
                   $ref: '#/components/schemas/Film'
+    post:
+      summary: Új film létrehozása
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Film'
+      responses:
+        '201':
+          description: Film létrehozva
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Film'
+  /sajatlista/{id}:
+    get:
+      summary: Film lekérése ID alapján
+      parameters:
+        - in: path
+          name: id
+          required: true
+          schema:
+            type: integer
+      responses:
+        '200':
+          description: Egy film
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Film'
+        '404':
+          description: Film nem található
+    put:
+      summary: Film frissítése ID alapján
+      parameters:
+        - in: path
+          name: id
+          required: true
+          schema:
+            type: integer
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Film'
+      responses:
+        '200':
+          description: Film frissítve
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Film'
+        '404':
+          description: Film nem található
+    delete:
+      summary: Film törlése ID alapján
+      parameters:
+        - in: path
+          name: id
+          required: true
+          schema:
+            type: integer
+      responses:
+        '204':
+          description: Film törölve
+        '404':
+          description: Film nem található
 components:
   schemas:
     Film:
       type: object
       properties:
         id:
-          type: string
+          type: integer
         title:
           type: string
         genre:
@@ -123,7 +192,9 @@ components:
           format: date
         type:
           type: string
-          enum: [film, series]
+          enum:
+            - Film
+            - Sorozat
         imageUrl:
           type: string
           format: uri
