# SZOP_UILL7U_Film11/filmstreaming-app/src/routes/filmRoutes.js
@@ -1,4 +1,3 @@
-// filepath: /c:/Users/gyorf/Desktop/EKKE/SZOP_UILL7U_Film11/filmstreaming-app/src/routes/filmRoutes.js
 import express from 'express';
 import FilmController from '../controllers/filmController.js';
 import filmService from '../services/filmService.js';
@@ -6,11 +5,15 @@ import filmService from '../services/filmService.js';
 const router = express.Router();
 const filmController = new FilmController(filmService);
 
-router.get('/', filmController.getUserList.bind(filmController));
+// Get all films
+router.get('/', filmController.getFilmsTable.bind(filmController));
+// Get film by ID
 router.get('/:id', filmController.getFilm.bind(filmController));
+// Create new film
 router.post('/', filmController.createFilm.bind(filmController));
+// Update film by ID
 router.put('/:id', filmController.updateFilm.bind(filmController));
+// Delete film by ID
 router.delete('/:id', filmController.deleteFilm.bind(filmController));
-router.get('/table', filmController.getFilmsTable.bind(filmController));
 
 export default router;
